--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <i style="float:right" class="fa fa-soundcloud fa-2x" aria-hidden="false"></i>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light fixed-top">
         <a class="navbar-brand" href="index.html"><img class="img-responsive" src="personallogo.jpg" style="width:50%";></a>
-        <button class="navbar-toggler navbar-toggler- " type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler navbar-toggler-right " type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav mr-auto">
+        <div class="collapse navbar-collapse dropdown-menu-right" id="navbarResponsive">
+            <ul class="navbar-nav mr-auto navbar-right">
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
                 </li>
@@ -91,10 +91,8 @@
     <!-- /.container -->
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
-        <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
-        </div>
+    <footer style="background-color:black" class="py-5">
+       
         <!-- /.container -->
     </footer>
 
