--- a/startbootstrap-grayscale-gh-pages 3/index.html
+++ b/startbootstrap-grayscale-gh-pages 3/index.html
@@ -64,19 +64,18 @@
 
     <!-- About Section -->
     <section id="about" class="content-section text-center">
-       
+        <div class="container">
             <div class="row">
-                <div class="col-md-5 mx-auto">
-                  <img style="width:100%" src="grouplogo1.jpg">
+                <div class="col-md-4 mx-auto">
+                  <img style="width:50%" src="grouplogo1.jpg">
                 </div>
 
-                <div class="col-md-4">Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.</div> 
+                <div class="col-md-4">This is a paragraph</div> 
 
-                <div class="col-md-3">Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. <b>Read More </b><i class="fa fa-arrow-right" aria-hidden="true"></i>
-</div> 
+                <div class="col-md-4">This is a paragraph</div> 
 
             </div>
-      
+        </div>
     </section>
 
     <!-- Download Section -->
